- fixed horizontal scroll

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -179,3 +179,6 @@ form.poll-vote h3
 .create-poll-form
   input
     width: 300px
+
+#header-image img
+  width: 100%
